delete collector-starter add docker file